[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Aleksander Wojnarowicz <alwojnarowicz@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
